# muxy

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  from_scratch_class.py  pyproject.toml  router_demo.py  routing_tree.py  routing_tree_demo.py  rsgi_app_demo.py  tree_demo.py
.github/workflows/: checks.yaml  release.yaml
benchmarks/: .gitignore  README.md  pyproject.toml  results.json
benchmarks/scripts/: bench.sh  routes.lua
benchmarks/src/benchmarks/app/: _common.py  blacksheep.py  emmett55.py  fastapi.py  litestar.py  muxy.py  muxy_asgi.py  quart.py  sanic.py  starlette.py
benchmarks/src/benchmarks/runner/: summarize.py  targets.py
examples/: compression_middleware.py  otel_middleware.py  router.py  rsgi.py  server.py  server_decorators.py  static_files.py  tree.py
src/muxy/: __init__.py  router.py  tree.py
src/muxy/_asgi/: router.py
src/muxy/apps/: static_files.py
src/muxy/middleware/: compress.py  otel.py  proxy_headers.py
src/muxy/utils/: headers.py  status.py
src/rsgisrv/: router.py
src/rsgisrv/rsgi/: proto.py
tests/: conftest.py  test_compress.py  test_compress_integration.py  test_otel.py  test_proxy_headers.py  test_router.py  test_static_files.py  test_tree.py
