[project]
name = "benchmarks"
version = "0.1.0"
description = "Benchmarks for muxy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "muxy",
    "granian[uvloop]>=2.6.0,<3.0.0",
    "starlette>=0.50.0,<0.51.0",
    "fastapi>=0.128.0,<0.129.0",
    "litestar>=2.19.0,<3.0.0",
    "sanic>=25.3.0,<26.0.0",
    "quart>=0.20.0,<0.21.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
add-bounds = "major"

[tool.uv.sources]
muxy = { path = ".." }

[dependency-groups]
dev = [
    "ruff>=0.14.10,<0.15.0",
    "ty>=0.0.8,<0.0.9",
]

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.ruff.lint]
future-annotations = true
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # bugbear
    "TD",    # todos
    "PERF",  # performance
    "RUF",   # ruff
    "ASYNC", # flake8-async
    "S",     # bandit
    "BLE",   # blind except
    "FBT",   # boolean trap
    "A",     # shadowing builtins
    "DTZ",   # datetime timezone
    "EM",    # error message
    "FA",    # future annotations
    "G",     # logging format
]
ignore = [
    "E501",  # line too long (handled by ruff format)
    "W505",  # line too long (handled by ruff format)
    "TD002", # todo author
    "TD003", # todo link
    "S101",  # use of assert
]

[tool.ruff.format]
docstring-code-format = true
